# iknowcmake

./: README.md
Step1/: .clang-format  CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cxx
Step2/: TutorialConfig.h.in  tutorial.cxx
step1_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Tutorial.sln  Tutorial.vcxproj  Tutorial.vcxproj.filters  TutorialConfig.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
step1_build/Tutorial.dir/Debug/: Tutorial.exe.recipe  Tutorial.ilk
step1_build/Tutorial.dir/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
step1_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
step1_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
step1_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
step1_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
